# assetsy

./: .dockerignore  .env.template  .gitignore  CLAUDE.md  Dockerfile  README.md  assetsy.py  conftest.py  docker-compose.coolify.yml  docker-compose.yml  mongo-init.js  pyproject.toml  requirements.txt  ue_test_data.json
bot/: bot.py  telegram_utils.py
scrapers/: fab_scraper.py  itch_scraper.py  scraper_interface.py  scraper_manager.py  scrapers.py  unity_scraper.py
tests/: test_fab_scraper.py  test_itch_scraper.py  test_unity_scraper.py
utils/: db_manager.py  logger.py  selenium_driver.py
