[project]
name = "assetsy"
version = "0.1.0"
description = "Telegram bot that watches game-asset marketplaces for limited-time free assets"
requires-python = ">=3.12"
dependencies = [
    "pymongo>=4.9",
    "python-dotenv>=1.0",
    "python-telegram-bot[job-queue]>=22.0",
    "selenium>=4.30",
]

[dependency-groups]
dev = [
    "pytest>=8.0",
    "ruff>=0.6",
]

[tool.uv]
package = false

[tool.pytest.ini_options]
testpaths = ["tests"]

[tool.ruff]
line-length = 119
target-version = "py312"

[tool.ruff.lint]
select = ["E", "F", "I", "UP", "B"]
